--- a/rosey/translations/de-de/about.yaml
+++ b/rosey/translations/de-de/about.yaml
@@ -1,4 +1,4 @@
-a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph: ""
+hugo-rosey-demo: ""
 _inputs:
   $:
     type: object
@@ -9,60 +9,45 @@ _inputs:
         - heading: Untranslated
           comment: "[To be translated](https://rugged-mandolin.cloudvent.net/about/)"
           inputs:
-            - a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph
             - hugo-rosey-demo
+            - its-all-about-about-baby
             - keep-what-you-need-delete-the-rest
-            - make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey
             - read-more
+            - the-about-page
         - heading: Translated
           comment: "[Already translated](https://rugged-mandolin.cloudvent.net/about/)"
           inputs: []
-  a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph:
-    label: Translation (de-de)
-    hidden: false
-    type: textarea
-    comment: >-
-      A demonstration of how Hugo and Rosey work in CloudCannon. This site has
-      extra setup so that we can enter translations via the CloudCannon GUI.
-      Additional languages can be set in the environment variables in
-      CloudCannon’s build configuration.
-
-
-      A new test paragraph, with **some** _**markdown to put**_ the demo through
-      its paces tests.  
-
-      A line break
-
-
-      Another new paragraph | [See
-      Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=A%20demonstration%20of,Another%20new%20paragraph)
   hugo-rosey-demo:
     label: Translation (de-de)
     hidden: false
     type: text
     comment: Hugo Rosey Demo | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Hugo%20Rosey%20Demo)
+  its-all-about-about-baby:
+    label: Translation (de-de)
+    hidden: false
+    type: textarea
+    comment: Its all about about baby. | [See
+      Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Its%20all%20about,about%20about%20baby.)
   keep-what-you-need-delete-the-rest:
     label: Translation (de-de)
     hidden: false
     type: textarea
     comment: Keep what you need. Delete the rest. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Keep%20what%20you,Delete%20the%20rest.)
-  make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey:
-    label: Translation (de-de)
-    hidden: false
-    type: textarea
-    comment: Make your own copy of this repository. Reference it or use it as a
-      template to get up and running with translation workflows in CloudCannon
-      using Rosey. | [See
-      Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Make%20your%20own,CloudCannon%20using%20Rosey.)
   read-more:
     label: Translation (de-de)
     hidden: false
     type: text
     comment: Read More | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Read%20More)
-hugo-rosey-demo: ""
+  the-about-page:
+    label: Translation (de-de)
+    hidden: false
+    type: text
+    comment: The about page | [See
+      Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=The%20about%20page)
+its-all-about-about-baby: ""
 keep-what-you-need-delete-the-rest: ""
-make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey: ""
 read-more: ""
+the-about-page: ""
