Updated 6 files via CloudCannon

--- a/rosey/translations/de-de/home.yaml
+++ b/rosey/translations/de-de/home.yaml
@@ -1,44 +1,39 @@
-hugo-rosey-demo: ''
+hugo-rosey-demo: ""
 _inputs:
   $:
     type: object
-    comment: '[Go to Page](https://rugged-mandolin.cloudvent.net/)'
+    comment: "[Go to Page](https://rugged-mandolin.cloudvent.net/)"
     options:
       place_groups_below: false
       groups:
         - heading: Untranslated
-          comment: '[To be translated](https://rugged-mandolin.cloudvent.net/)'
+          comment: "[To be translated](https://rugged-mandolin.cloudvent.net/)"
           inputs:
             - hugo-rosey-demo
             - keep-what-you-need-delete-the-rest
-            - >-
-              make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey
-            - >-
-              markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph
+            - markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph
             - read-more
         - heading: Translated
-          comment: '[Already translated](https://rugged-mandolin.cloudvent.net/)'
-          inputs: []
+          comment: "[Already translated](https://rugged-mandolin.cloudvent.net/)"
+          inputs:
+            - make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey
   hugo-rosey-demo:
     label: Translation (de-de)
     hidden: false
     type: text
-    comment: >-
-      Hugo Rosey Demo | [See
+    comment: Hugo Rosey Demo | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Hugo%20Rosey%20Demo)
   keep-what-you-need-delete-the-rest:
     label: Translation (de-de)
     hidden: false
     type: textarea
-    comment: >-
-      Keep what you need. Delete the rest. | [See
+    comment: Keep what you need. Delete the rest. | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Keep%20what%20you,Delete%20the%20rest.)
   make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey:
     label: Translation (de-de)
     hidden: false
     type: textarea
-    comment: >-
-      Make your own copy of this repository. Reference it or use it as a
+    comment: Make your own copy of this repository. Reference it or use it as a
       template to get up and running with translation workflows in CloudCannon
       using Rosey. | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Make%20your%20own,CloudCannon%20using%20Rosey.)
@@ -65,13 +60,12 @@ _inputs:
     label: Translation (de-de)
     hidden: false
     type: text
-    comment: >-
-      Read More | [See
+    comment: Read More | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Read%20More)
-keep-what-you-need-delete-the-rest: ''
-make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey: >-
+keep-what-you-need-delete-the-rest: ""
+make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey:
   Erstellen Sie Ihre eigene Kopie dieses Repositorys. Referenzieren Sie es oder
   verwenden Sie es als Vorlage, um mit Rosey Übersetzungsworkflows in
   CloudCannon zu starten. | Siehe Kontext
-markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph: ''
-read-more: ''
+markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph: ""
+read-more: ""
