--- a/rosey/translations/de-de/about.yaml
+++ b/rosey/translations/de-de/about.yaml
@@ -21,30 +21,43 @@ _inputs:
     label: Translation (de-de)
     hidden: false
     type: text
+    options: {}
     comment: Hugo Rosey Demo | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Hugo%20Rosey%20Demo)
   its-all-about-about-baby:
     label: Translation (de-de)
     hidden: false
     type: textarea
+    options: {}
     comment: Its all about about baby. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Its%20all%20about,about%20about%20baby.)
   keep-what-you-need-delete-the-rest:
     label: Translation (de-de)
     hidden: false
     type: textarea
+    options: {}
     comment: Keep what you need. Delete the rest. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Keep%20what%20you,Delete%20the%20rest.)
   markdown:the-about-page:
     label: Translation (de-de)
     hidden: false
     type: markdown
+    options:
+      bold: true
+      italic: true
+      strike: true
+      underline: true
+      link: true
+      undo: true
+      redo: true
+      removeformat: true
     comment: The about page | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=The%20about%20page)
   read-more:
     label: Translation (de-de)
     hidden: false
     type: text
+    options: {}
     comment: Read More | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Read%20More)
 its-all-about-about-baby: ""
