--- a/rosey/translations/es-es/home.yaml
+++ b/rosey/translations/es-es/home.yaml
@@ -1,43 +1,48 @@
-hugo-rosey-demo: ""
+hugo-rosey-demo: ''
 _inputs:
   $:
     type: object
-    comment: "[Go to Page](https://rugged-mandolin.cloudvent.net/)"
+    comment: '[Go to Page](https://rugged-mandolin.cloudvent.net/)'
     options:
       place_groups_below: false
       groups:
         - heading: Untranslated
-          comment: "[To be translated](https://rugged-mandolin.cloudvent.net/)"
+          comment: '[To be translated](https://rugged-mandolin.cloudvent.net/)'
           inputs:
             - hugo-rosey-demo
             - keep-what-you-need-delete-the-rest
             - read-more
         - heading: Translated
-          comment: "[Already translated](https://rugged-mandolin.cloudvent.net/)"
+          comment: '[Already translated](https://rugged-mandolin.cloudvent.net/)'
           inputs:
-            - make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey
-            - markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph
+            - >-
+              make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey
+            - >-
+              markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph
             - new-heading
   hugo-rosey-demo:
     label: Translation (es-es)
     hidden: false
     type: text
     options: {}
-    comment: Hugo Rosey Demo | [See
+    comment: >-
+      Hugo Rosey Demo | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Hugo%20Rosey%20Demo)
   keep-what-you-need-delete-the-rest:
     label: Translation (es-es)
     hidden: false
     type: textarea
     options: {}
-    comment: Keep what you need. Delete the rest. | [See
+    comment: >-
+      Keep what you need. Delete the rest. | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Keep%20what%20you,Delete%20the%20rest.)
   make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey:
     label: Translation (es-es)
     hidden: false
     type: textarea
     options: {}
-    comment: Make your own copy of this repository. Reference it or use it as a
+    comment: >-
+      Make your own copy of this repository. Reference it or use it as a
       template to get up and running with translation workflows in CloudCannon
       using Rosey. | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Make%20your%20own,CloudCannon%20using%20Rosey.)
@@ -74,33 +79,35 @@ _inputs:
     hidden: false
     type: text
     options: {}
-    comment: New heading | [See
+    comment: >-
+      New heading | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=New%20heading)
   read-more:
     label: Translation (es-es)
     hidden: false
     type: text
     options: {}
-    comment: Read More | [See
+    comment: >-
+      Read More | [See
       Context](https://rugged-mandolin.cloudvent.net/#:~:text=Read%20More)
-keep-what-you-need-delete-the-rest: ""
-make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey:
+keep-what-you-need-delete-the-rest: ''
+make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey: >-
   Haga su propia copia de este repositorio. Consúltelo o úselo como plantilla
   para comenzar a trabajar con flujos de trabajo de traducción en CloudCannon
   usando Rosey.
 markdown:a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configurationa-new-test-paragraph-with-some-markdown-to-uputu-the-demo-through-its-spacess-testsa-line-breakanother-new-paragraph: >-
-  A demonstration of how Hugo and Rosey work in CloudCannon. This site has extra
-  setup so that we can enter translations via the CloudCannon GUI. Additional
-  languages can be set in the environment variables in CloudCannon’s build
-  configuration.
+  Una demostración de cómo trabajan Hugo y Rosey en CloudCannon. Este sitio
+  tiene una configuración adicional para que podamos ingresar traducciones a
+  través de la GUI de CloudCannon. Se pueden configurar idiomas adicionales en
+  las variables de entorno en la configuración de compilación de CloudCannon.
 
 
-  A new test paragraph, with **some** ***markdown to put*** the demo through its
-  paces tests.
+  Un nuevo párrafo de prueba, con algunas rebajas para poner a prueba la
+  demostración.
 
-  A line break
+  Un salto de línea
 
 
-  Another new paragraph
+  Otro nuevo párrafo
 new-heading: Translated heading demo
-read-more: ""
+read-more: ''
