--- a/rosey/translations/es-es/about.yaml
+++ b/rosey/translations/es-es/about.yaml
@@ -2,18 +2,19 @@ hugo-rosey-demo: Demostración de Hugo Rosey
 _inputs:
   $:
     type: object
-    comment: "[Go to Page](https://rugged-mandolin.cloudvent.net/about/)"
+    comment: '[Go to Page](https://rugged-mandolin.cloudvent.net/about/)'
     options:
       place_groups_below: false
       groups:
         - heading: Untranslated
-          comment: "[To be translated](https://rugged-mandolin.cloudvent.net/about/)"
+          comment: '[To be translated](https://rugged-mandolin.cloudvent.net/about/)'
           inputs:
             - its-all-about-about-baby
-            - markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them
+            - >-
+              markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them
             - read-more
         - heading: Translated
-          comment: "[Already translated](https://rugged-mandolin.cloudvent.net/about/)"
+          comment: '[Already translated](https://rugged-mandolin.cloudvent.net/about/)'
           inputs:
             - hugo-rosey-demo
             - keep-what-you-need-delete-the-rest
@@ -22,21 +23,24 @@ _inputs:
     hidden: false
     type: text
     options: {}
-    comment: Hugo Rosey Demo | [See
+    comment: >-
+      Hugo Rosey Demo | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Hugo%20Rosey%20Demo)
   its-all-about-about-baby:
     label: Translation (es-es)
     hidden: false
     type: textarea
     options: {}
-    comment: Its all about about baby. | [See
+    comment: >-
+      Its all about about baby. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Its%20all%20about,about%20about%20baby.)
   keep-what-you-need-delete-the-rest:
     label: Translation (es-es)
     hidden: false
     type: textarea
     options: {}
-    comment: Keep what you need. Delete the rest. | [See
+    comment: >-
+      Keep what you need. Delete the rest. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Keep%20what%20you,Delete%20the%20rest.)
   markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them:
     label: Translation (es-es)
@@ -70,9 +74,22 @@ _inputs:
     hidden: false
     type: text
     options: {}
-    comment: Read More | [See
+    comment: >-
+      Read More | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Read%20More)
-its-all-about-about-baby: ""
+its-all-about-about-baby: ''
 keep-what-you-need-delete-the-rest: Conserva lo que necesitas. eliminar el resto.
-markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them: ""
-read-more: ""
+markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them: >-
+  Cuando sucedan cosas, disfrútalas. Son pequeños regalos. Simplemente piensa en
+  estas cosas en tu mente y colócalas en el lienzo. Quizás tenga un amiguito que
+  viva aquí. Simplemente déjate llevar y cae como una pequeña cascada. Este es
+  el momento de sacar todas tus frustraciones, mucho mejor que patear al perro
+  por la casa o desquitarte con tu cónyuge.
+
+
+  Si lo que estás haciendo no te hace feliz, estás haciendo lo incorrecto. Tome
+  su tiempo. La velocidad vendrá después. No hay una regla. Simplemente
+  practique y descubra qué método funciona mejor para usted. Subamos aquí y
+  comencemos a divertirnos. Si vamos a tener animales cerca, todos tenemos que
+  preocuparnos por ellos y cuidarlos.
+read-more: ''
