Updated 4 files via CloudCannon

--- a/rosey/translations/de-de/about.yaml
+++ b/rosey/translations/de-de/about.yaml
@@ -1,46 +1,42 @@
-hugo-rosey-demo: ''
+hugo-rosey-demo: ""
 _inputs:
   $:
     type: object
-    comment: '[Go to Page](https://rugged-mandolin.cloudvent.net/about/)'
+    comment: "[Go to Page](https://rugged-mandolin.cloudvent.net/about/)"
     options:
       place_groups_below: false
       groups:
         - heading: Untranslated
-          comment: '[To be translated](https://rugged-mandolin.cloudvent.net/about/)'
+          comment: "[To be translated](https://rugged-mandolin.cloudvent.net/about/)"
           inputs:
             - hugo-rosey-demo
             - its-all-about-about-baby
-            - >-
-              markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them
             - read-more
         - heading: Translated
-          comment: '[Already translated](https://rugged-mandolin.cloudvent.net/about/)'
+          comment: "[Already translated](https://rugged-mandolin.cloudvent.net/about/)"
           inputs:
             - keep-what-you-need-delete-the-rest
+            - markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them
   hugo-rosey-demo:
     label: Translation (de-de)
     hidden: false
     type: text
     options: {}
-    comment: >-
-      Hugo Rosey Demo | [See
+    comment: Hugo Rosey Demo | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Hugo%20Rosey%20Demo)
   its-all-about-about-baby:
     label: Translation (de-de)
     hidden: false
     type: textarea
     options: {}
-    comment: >-
-      Its all about about baby. | [See
+    comment: Its all about about baby. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Its%20all%20about,about%20about%20baby.)
   keep-what-you-need-delete-the-rest:
     label: Translation (de-de)
     hidden: false
     type: textarea
     options: {}
-    comment: >-
-      Keep what you need. Delete the rest. | [See
+    comment: Keep what you need. Delete the rest. | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Keep%20what%20you,Delete%20the%20rest.)
   markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them:
     label: Translation (de-de)
@@ -74,10 +70,9 @@ _inputs:
     hidden: false
     type: text
     options: {}
-    comment: >-
-      Read More | [See
+    comment: Read More | [See
       Context](https://rugged-mandolin.cloudvent.net/about/#:~:text=Read%20More)
-its-all-about-about-baby: ''
+its-all-about-about-baby: ""
 keep-what-you-need-delete-the-rest: Behalten Sie, was Sie brauchen. Den Rest löschen.
 markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-these-things-in-your-mind-and-drop-em-on-canvas-maybe-he-has-a-little-friend-that-lives-right-over-here-just-let-go---and-fall-like-a-little-waterfall-this-is-the-time-to-get-out-all-your-flustrations-much-better-than-kicking-the-dog-around-the-house-or-taking-it-out-on-your-spouseif-what-youre-doing-doesnt-make-you-happy---youre-doing-the-wrong-thing-take-your-time-speed-will-come-later-there-isnt-a-rule-you-just-practice-and-find-out-which-way-works-best-for-you-lets-go-up-in-here-and-start-having-some-fun-if-were-going-to-have-animals-around-we-all-have-to-be-concerned-about-them-and-take-care-of-them: >-
   Wenn etwas passiert – genieße es. Es sind kleine Geschenke. Denken Sie einfach
@@ -93,4 +88,4 @@ markdown:when-things-happen---enjoy-them-theyre-little-gifts-just-think-about-th
   und finden Sie heraus, welcher Weg für Sie am besten funktioniert. Lasst uns
   hier hochgehen und Spaß haben. Wenn wir Tiere in unserer Nähe haben wollen,
   müssen wir uns alle um sie kümmern und uns um sie kümmern.
-read-more: ''
+read-more: ""
